# adomvi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
adomvi/: 01_TankDetectionYolov8Train.ipynb  02_TankTracking.ipynb  03_ImageScraping.ipynb  DreamboothFineTuning.ipynb  ImageNet.ipynb  ImageScraping.ipynb  TankDetectionYolov8Train.ipynb  TankTracking.ipynb  __init__.py  utils.py
adomvi/datasets/: augmentation.py  diffusers.py  google.py  imagenet.py  roboflow.py  search2.py
adomvi/scraper/: google.py
adomvi/yolo/: utils.py  yolo.py
notebooks/: 01_Clean.ipynb  01_Prepare.ipynb  01_TankDetectionYolov8Train.ipynb  02_TankTracking.ipynb  02_Train.ipynb  03_ImageScraping.ipynb  03_Track.ipynb  04_DreamboothFineTuning.ipynb  04_Evaluate.ipynb  05_ImageScraping.ipynb  DreamboothFineTuning.ipynb
resources/: leclerc-metadata.jsonl
