[tool.poetry]
name = "adomvi"
version = "0.1.0"
description = "Automated Detection of Military Vehicles from Video Input"
authors = ["Jonas Renault <jonasrenault@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jonasrenault/adomvi#readme"
repository = "https://github.com/jonasrenault/adomvi"

[tool.poetry.dependencies]
python = "~3.10"
tqdm = "^4.65.0"
numpy = "^1.23.1"
ultralytics = "^8.0.114"
boto3 = "1.17.36"
kaleido = "0.2.1"
fiftyone = "^0.21.0"
boxmot = "^10.0.14"
opencv-python = "^4.7.0.72"
selenium = "^4.10.0"

[tool.poetry.group.diffusers.dependencies]
accelerate = "^0.21.0"
torchvision = "^0.15.2"
transformers = "^4.31.0"
ftfy = "^6.1.1"
tensorboard = "^2.13.0"
jinja2 = "^3.1.2"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
jupyterlab = "^4.2.1"
black = "^24.4.2"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 90
target_version = ['py310']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "templates",
]
lint.ignore = []
line-length = 90
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]
src = ["adomvi", "tests"]
