[tool.poetry]
name = "adomvi"
version = "0.1.0"
description = "Automated Detection of Military Vehicles from Video Input"
authors = ["Jonas Renault <jonasrenault@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jonasrenault/adomvi#readme"
repository = "https://github.com/jonasrenault/adomvi"

[tool.poetry.dependencies]
python = "~3.10"
tqdm = "^4.66.4"
numpy = "^1.26.4"
ultralytics = "^8.2.28"
fiftyone = "^0.24.0"
opencv-python = "^4.10.0.82"
selenium = "^4.21.0"
lapx = "^0.5.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
jupyterlab = "^4.2.1"
black = "^24.4.2"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 90
target_version = ['py310']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "templates",
]
lint.ignore = []
line-length = 90
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]
src = ["adomvi", "tests"]
